Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
None
-
-
3ed3e14a8965f4e231d80480a587c62d556199b7 (qt/qtmultimedia/dev) 03457e41316e4d4a58a61a8ba1f495ca87ecaea4 (qt/qtmultimedia/6.2)
Description
Crash on QMediaRecorder when running test
When running auto tests on Android, QMediaRecorder can crash with SIGSEGV signal.
Attachments
Issue Links
- resulted from
-
QTBUG-97539 Integration auto tests in Android fail without being reported
-
- Closed
-
For Gerrit Dashboard: QTBUG-97646 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
377506,4 | Fix crashes on qandroidcapturesession | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
377895,2 | Fix crashes on qandroidcapturesession | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |