Fix crashes on qandroidcapturesession

The auto tests in android is missing a surface, and running those
could crashes when trying to record video. This patch is fixing those
crashes

Fixes: QTBUG-97646
Pick-to: 6.2
Change-Id: I69d9e889453ea5c29958dd1369cf1d2079bfa7c4
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>